--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-terraform.tfstate
-terraform.tfstate.backup
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
